refactor de validación y métodos de disponibilidad